--- a/rootfs/etc/confd/templates/mosquitto.general.conf.tmpl
+++ b/rootfs/etc/confd/templates/mosquitto.general.conf.tmpl
@@ -19,7 +19,7 @@
 # This should be set to /var/run/mosquitto.pid if mosquitto is
 # being run automatically on boot with an init script and
 # start-stop-daemon or similar.
-#pid_file
+pid_file /var/run/mosquitto.pid
 
 # When run as root, drop privileges to this user and its primary
 # group.
