--- a/rootfs/etc/confd/templates/mosquitto.listener.conf.tmpl
+++ b/rootfs/etc/confd/templates/mosquitto.listener.conf.tmpl
@@ -9,7 +9,7 @@
 #bind_address
 
 # Port to use for the default listener.
-#port 1883
+port {{getenv "PORT" "1883"}}
 
 # The maximum number of client connections to allow. This is
 # a per listener setting.
